--- a/www/src/index.html
+++ b/www/src/index.html
@@ -1,17 +1,99 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Bitident</title>
+  <title>Bitident - Decentralized Authentication</title>
   <base href="/">
-
+  <meta name="description"
+    content="Decentralized authentication standard based on the Metaverse public Blockchain digital identity ledger.">
+  <meta name="keywords"
+    content="metaverse,blockchain,authentication,security,login,decentralized,digital identity,avatar">
+  <meta name="author" content="Sven Mutzl">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/assets/img/icon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script> var global = global || window; </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "url": "https://bitident.com",
+      "name": "bitident",
+      "brand": "bitident",
+      "logo": "https://bitident.com/assets/img/logo.png",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "email": "dev@blocktrack.net",
+        "telephone": "+49 40 600 20 730",
+        "contactType": "technical support"
+      }
+    }
+    </script>
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "HowTo",
+      "name": "How to authenticate with a Metaverse Avatar using bitident",
+      "description": "Use your Metaverse digital identity for the decentralized authentication mechanism of bitident. The following steps will guide you through your first Blockchain powered authentication.",
+      "supply": [
+    {
+      "@type": "HowToSupply",
+      "name": "Metaverse Avatar"
+    }
+  ],
+  "tool": [
+  {
+    "@type": "HowToTool",
+    "name": "Bitident compatible wallet"
+  }
+],
+      "step": [
+    {
+      "@type": "HowToStep",
+      "name": "Request Authentication",
+      "image": {
+        "@type": "ImageObject",
+        "url": "https://bitident.com/assets/img/icon.png"
+      },
+      "itemListElement": [{
+        "@type": "HowToDirection",
+        "text": "Open the website or application you want to authenticate to."
+      }, {
+        "@type": "HowToDirection",
+        "text": "You should be presented with a QR-Code or a text that contains the request parameters."
+      }]
+    },
+    {
+      "@type": "HowToStep",
+      "name": "Verify and sign the request",
+      "itemListElement": [{
+        "@type": "HowToDirection",
+        "text": "Open your bitident compatible wallet and use the Authentication tool to scan the request."
+      }, {
+        "@type": "HowToDirection",
+        "text": "You should now see the request parameters. Carefully check the request origin and URL."
+      }, {
+        "@type": "HowToDirection",
+        "text": "Sign and send the request. Your wallet will automatically send it to the origin URL."
+      }]
+    }, 
+    {
+      "@type": "HowToStep",
+      "name": "Check your authentication status",
+      "itemListElement": [{
+        "@type": "HowToDirection",
+        "text": "The request origin should be able to verify your signed request and accept your authentication"
+      }]
+    }
+    ]
+    }
+    </script>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
