--- a/www/src/index.html
+++ b/www/src/index.html
@@ -25,7 +25,7 @@
       "logo": "https://bitident.com/assets/img/logo.png",
       "contactPoint": {
         "@type": "ContactPoint",
-        "email": "dev@blocktrack.net",
+        "email": "info@bitident.com",
         "telephone": "+49 40 600 20 730",
         "contactType": "technical support"
       }
