--- a/www/src/index.html
+++ b/www/src/index.html
@@ -14,7 +14,13 @@
   <link rel="icon" type="image/x-icon" href="/assets/img/icon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script> var global = global || window; </script>
+  <script>
+    var global = global || window;
+  var process = process || {
+    env: { DEBUG: undefined },
+    version: []
+  };
+  </script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
